objects/Document_Request__c.object
<CustomObject>
    <description>Snapshots of data used to generate unique inputs for document processing in the Adobe Forms Service.</description>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_FinanceCharge__c</fullName>
        <formula>&apos;0.0&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account FinanceCharge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Lang__c</fullName>
        <formula>&apos;en&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Lang</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Account Type(Lease)</description>
        <label>Account Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentLocation_Address1__c</fullName>
        <label>Agent Location Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentLocation_Address2__c</fullName>
        <label>Agent Location Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentLocation_City__c</fullName>
        <label>Agent Location City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentLocation_Name__c</fullName>
        <label>Agent Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentLocation_Phone__c</fullName>
        <label>Agent Phone Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentLocation_State__c</fullName>
        <label>Agent Location State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentLocation_ZipCode__c</fullName>
        <label>Agent Location ZipCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuctionLocation_Address1__c</fullName>
        <label>Auction Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuctionLocation_Address2__c</fullName>
        <label>Auction Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuctionLocation_City__c</fullName>
        <label>Auction City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuctionLocation_Name__c</fullName>
        <label>Auction Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuctionLocation_Phone__c</fullName>
        <label>Auction Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuctionLocation_State__c</fullName>
        <label>Auction State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuctionLocation_ZipCode__c</fullName>
        <label>Auction ZipCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <label>Case Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Document Requests</relationshipLabel>
        <relationshipName>Document_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CoCustomer_AddyAddress1__c</fullName>
        <label>CoCustomer AddyAddress1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoCustomer_AddyAddress2__c</fullName>
        <label>CoCustomer AddyAddress2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoCustomer_AddyCity__c</fullName>
        <label>CoCustomer AddyCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoCustomer_AddyState__c</fullName>
        <label>CoCustomer AddyState</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoCustomer_AddyZip__c</fullName>
        <label>CoCustomer AddyZip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContractDate__c</fullName>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerFirstName__c</fullName>
        <label>Customer First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerLastName__c</fullName>
        <label>Customer Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_AddyAddress1__c</fullName>
        <label>Customer Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_AddyAddress2__c</fullName>
        <label>Customer Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_AddyCity__c</fullName>
        <label>Customer City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_AddyState__c</fullName>
        <label>Customer State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_AddyZipCode__c</fullName>
        <label>Customer Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_FirstName__c</fullName>
        <label>Customer First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_LastName__c</fullName>
        <label>Customer Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_MiddleName__c</fullName>
        <label>Customer Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Salutation__c</fullName>
        <label>Customer Salutation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfContract__c</fullName>
        <label>Date of Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Address1__c</fullName>
        <label>Dealer Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Address2__c</fullName>
        <label>Dealer Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_City__c</fullName>
        <label>Dealer City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_FirstName__c</fullName>
        <label>Dealer FirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_LastName__c</fullName>
        <label>Dealer LastName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <label>Dealer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Number__c</fullName>
        <label>Dealer Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Phone__c</fullName>
        <label>Dealer Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_State__c</fullName>
        <label>Dealer State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ZipCode__c</fullName>
        <label>Dealer ZipCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Extn__c</fullName>
        <label>Department Extn</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Hours__c</fullName>
        <label>Department Hours</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Phone__c</fullName>
        <label>Department Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Render Form Service Error Description</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatch_DeviceName__c</fullName>
        <label>Dispatch Device Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatch_DocumentOutput__c</fullName>
        <label>Dispatch Document Output</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatch_Name__c</fullName>
        <description>Dispatch Name (Print Central, Print Local, Email, Fax)</description>
        <label>Dispatch Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatches_DeviceNameTransformed__c</fullName>
        <formula>IF(Dispatch_DeviceName__c == &apos;Do Not Print&apos;, &apos;&apos;, Dispatch_DeviceName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dispatches DeviceNameTransformed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <label>Document Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveStateCode__c</fullName>
        <label>Effective State Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empty_Field__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Empty Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_LegalLongNameCaps__c</fullName>
        <label>Entity LegalLongNameCaps</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_LegalLongName__c</fullName>
        <label>Entity LegalLongName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_LegalShortName__c</fullName>
        <label>Entity LegalShortName</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Logo__c</fullName>
        <label>Entity Logo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_LongNameCaps__c</fullName>
        <label>Entity LongNameCaps</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_LongName__c</fullName>
        <label>Entity Long Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Phone__c</fullName>
        <label>Entity Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_ReturnAddressAddy1__c</fullName>
        <formula>&apos;123 Street Name&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity ReturnAddressAddy1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_ReturnAddressAddy2__c</fullName>
        <formula>&apos;addy2&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity ReturnAddressAddy2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_ReturnAddressName__c</fullName>
        <formula>&apos;123 Street&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity ReturnAddressName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_ReturnAddressPhone__c</fullName>
        <formula>&apos;123-444-5678&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity ReturnAddressPhone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_ShortName__c</fullName>
        <label>Entity Short Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Shortname_Transformed__c</fullName>
        <formula>IF(Repossession__r.Entity_ShortName__c == &apos;LFS&apos;, &apos;LFS&apos;, &apos;TMCC&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Shortname Transformed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormId__c</fullName>
        <label>Form ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormPath__c</fullName>
        <label>Form Path</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormType__c</fullName>
        <description>Type of Form (Interactive, Automatic)</description>
        <label>Form Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsFormIdLookupRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Form ID Lookup Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWaterMarkRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Water Mark Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MailingDate__c</fullName>
        <label>Mailing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherRepoCharges_Address1__c</fullName>
        <label>Other Repossession Charges Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherRepoCharges_Address2__c</fullName>
        <label>Other Repossession Charges Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherRepoCharges_Charge__c</fullName>
        <label>Other Repossession Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherRepoCharges_City__c</fullName>
        <label>Other Repossession Charges City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherRepoCharges_Description__c</fullName>
        <label>Other Repossession Charges Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherRepoCharges_Name__c</fullName>
        <label>Other Repossession Charges Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherRepoCharges_Phone__c</fullName>
        <label>Other Repossession Charges Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherRepoCharges_State__c</fullName>
        <label>Other Repossession Charges State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherRepoCharges_ZipCode__c</fullName>
        <label>Other Repossession Charges ZipCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageCount__c</fullName>
        <description>Rendered PDF page count</description>
        <label>PageCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PersonalPropertyFee_Address1__c</fullName>
        <label>Personal Property Fee Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonalPropertyFee_Address2__c</fullName>
        <label>Personal Property Fee Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonalPropertyFee_City__c</fullName>
        <label>Personal Property Fee City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonalPropertyFee_Name__c</fullName>
        <label>PersonalPropertyFeePayableTo Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonalPropertyFee_Phone__c</fullName>
        <label>PersonalPropertyFeePayableTo Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonalPropertyFee_State__c</fullName>
        <label>Personal Property Fee State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonalPropertyFee_ZipCode__c</fullName>
        <label>Personal Property Fee ZipCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintDate__c</fullName>
        <label>Print Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RL_Auction_Agency_URL__c</fullName>
        <label>Online Auction URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_CostOfSales__c</fullName>
        <label>Cost of Sale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_DelinquencyAndCollectionCharges__c</fullName>
        <label>Delinquency and Collection Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_EarliestDateOfSale__c</fullName>
        <label>Earliest Date of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RL_FirstOnlineOfferingFromDate__c</fullName>
        <label>First Online Offering From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RL_FirstOnlineOfferingToDate__c</fullName>
        <label>First Online Offering To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RL_FirstPhysicalOfferingDate__c</fullName>
        <label>First Physical Offering Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RL_FirstPhysicalOfferingTime__c</fullName>
        <label>First Physical Offering Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_FirstSaleOfferingDate__c</fullName>
        <label>First Sale Offering Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RL_FirstSaleOfferingTime__c</fullName>
        <label>First Sale Offering Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_FourthSaleOfferingDate__c</fullName>
        <label>Fourth Sale Offering Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RL_FourthSaleOfferingTime__c</fullName>
        <label>Fourth Sale Offering Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_ImpoundFee__c</fullName>
        <label>Impound Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_InstallmentPastDue__c</fullName>
        <label>Installment Past Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_IsContractReinstatedBefore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Contract Reinstated Before</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_IsCustomerNotLiableForDeficiencyBuyer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Customer Not Liable For Deficiency Bu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_IsFailureToMakePayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Failure To Make Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_IsNoticeModifiedByCoverLetterBuyer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Notice Modified By Cover Letter Buyer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_IsOtherReasonForNoReinstatement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Other Reason For No Reinstatement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_IsReinstatementAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reinstatement Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_MonthlyInstallmentDueDate__c</fullName>
        <label>Monthly Installment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RL_MonthlyPaymentAmount__c</fullName>
        <label>Monthly Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_NoticeDate__c</fullName>
        <label>Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RL_NumberOfDaysToSell__c</fullName>
        <label>Number of Days to Sell</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_OtherReasonForRepossession__c</fullName>
        <label>Other Reason for Repossession</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RL_PerformanceDeposit__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Performance Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_PersonalPropertyFee__c</fullName>
        <label>Personal Property Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_RecoveryDate__c</fullName>
        <label>Recovery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RL_RedemptionProcessingFee__c</fullName>
        <label>Redemption Processing Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_RepoLocationName__c</fullName>
        <label>Repo Location Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_RepossessionCosts__c</fullName>
        <label>Repossession Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_RepossessionTitleMailedDate__c</fullName>
        <label>Repossession Title Mailed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RL_Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_SecondOnlineOfferingFromDate__c</fullName>
        <label>Second Online Offering From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RL_SecondOnlineOfferingToDate__c</fullName>
        <label>Second Online Offering To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RL_SecondPhysicalOfferingDate__c</fullName>
        <label>Second Physical Offering Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RL_SecondPhysicalOfferingTime__c</fullName>
        <label>Second Physical Offering Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_SecondSaleOfferingDate__c</fullName>
        <label>Second Sale Offering Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RL_SecondSaleOfferingTime__c</fullName>
        <label>Second Sale Offering Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_SecurityDeposit__c</fullName>
        <label>Security Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_ThirdSaleOfferingDate__c</fullName>
        <label>Third Sale Offering Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RL_ThirdSaleOfferingTime__c</fullName>
        <label>Third Sale Offering Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_TotalPurchaseAmountOfLeaseVehicle__c</fullName>
        <label>Total Purchase Amount Of Lease Vehicle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_TotalRedemptionAmount__c</fullName>
        <label>Total Redemption Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_TotalReinstatementAmount__c</fullName>
        <label>Total Reinstatement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_TransportationExpenses__c</fullName>
        <label>Transportation Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_TypeOfSale__c</fullName>
        <label>Type of Sale</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_UnearnedFinanceCharges__c</fullName>
        <label>Unearned Finance Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_UnearnedInsuranceCosts__c</fullName>
        <label>Unearned Insurance Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_UnearnedLeasePayments__c</fullName>
        <label>Unearned Lease Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_UnearnedRentCharges__c</fullName>
        <label>Unearned Rent Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_UnpaidGrossBalance__c</fullName>
        <label>Unpaid Gross Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_UnpaidLateCharges__c</fullName>
        <label>Unpaid Late Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_VehicleHoldingCharges__c</fullName>
        <label>Vehicle Holding Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_VehicleStorageDailyRate__c</fullName>
        <label>Vehicle Daily Storage Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_VehicleStorageFee__c</fullName>
        <label>Vehicle Storage Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recipient_Address1__c</fullName>
        <label>Recipient Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Address2__c</fullName>
        <label>Recipient Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_CityStateZipCode__c</fullName>
        <label>Recipient City State Zip code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Country__c</fullName>
        <label>Recipient Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Email__c</fullName>
        <label>Recipient Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Fax__c</fullName>
        <label>Recipient Fax</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_NameLine1__c</fullName>
        <label>Recipient Name Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Phone__c</fullName>
        <label>Recipient Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <label>Recipient</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RedemptionAgent_Address1__c</fullName>
        <label>Redemption Agent Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RedemptionAgent_Address2__c</fullName>
        <label>Redemption Agent Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RedemptionAgent_City__c</fullName>
        <label>Redemption Agent City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RedemptionAgent_Name__c</fullName>
        <label>Redemption Agent Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RedemptionAgent_Phone__c</fullName>
        <label>Redemption Agent Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RedemptionAgent_State__c</fullName>
        <label>Redemption Agent State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RedemptionAgent_ZipCode__c</fullName>
        <label>Redemption Agent ZipCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepoFeePayableTo_Address1__c</fullName>
        <label>Repossession Fee Payable To Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepoFeePayableTo_Address2__c</fullName>
        <label>Repossession Fee Payable To Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepoFeePayableTo_City__c</fullName>
        <label>Repossession Fee Payable To City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepoFeePayableTo_Name__c</fullName>
        <label>Repossession Fee Payable To Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepoFeePayableTo_Phone__c</fullName>
        <label>Repossession Fee Payable To Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepoFeePayableTo_State__c</fullName>
        <label>Repossession Fee Payable To State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepoFeePayableTo_ZipCode__c</fullName>
        <label>Repossession Fee Payable To Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repossession__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repossession</label>
        <referenceTo>Repossession__c</referenceTo>
        <relationshipLabel>Document Requests</relationshipLabel>
        <relationshipName>Document_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Phone__c</fullName>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnAddress_Address1__c</fullName>
        <formula>if (
  ISPICKVAL(Return_Address_Location__c, &apos;Central&apos;),
  Entity_LongName__c &amp; &apos; (&quot;&apos; &amp; Entity_ShortName__c &amp; &apos;&quot;)&apos;,
  &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Address 1</label>
        <type>Text</type>
    </fields>
</CustomObject>